--- a/pom.xml
+++ b/pom.xml
@@ -13,5 +13,8 @@
         <maven.compiler.target>18</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
-<modules><module>spring-security-client</module></modules>
+<modules><module>spring-security-client</module>
+
+</modules>
+
 </project>
